# Computational-Geometry-Program

./: README.md
ComputtationalGeometryApp/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
ComputtationalGeometryApp/ComputtationalGeometryApp/: convexHull.h  mainwindow.cpp  mainwindow.h
